Added GET /objects/{id} GetObjectHandler
